name:                torrent
version:             0.1.0.0
synopsis:            TODO.
description:         TODO.
license:             BSD3
license-file:        LICENSE
author:              Kyle Cesare <kcesare@gmail.com>
maintainer:          Kyle Cesare <kcesare@gmail.com>
copyright:           2013 Kyle Cesare
category:            Network
build-type:          Simple
cabal-version:       >=1.8

executable torrent
  hs-source-dirs:    src
  main-is:           Main.hs
  build-depends:     base ==4.6.*
                   , containers
                   , cryptohash
                   , bytestring
                   , HTTP
                   , network
                   , mtl
                   , attoparsec
